# chatsune-ollama-sidecar

./: .env.example  .gitignore  README.md  SPEC.md  compose.yml  start-backend.sh
.github/workflows/: docker.yml
backend/: Dockerfile  pyproject.toml
backend/sidecar/: _reasoning.py  config.py  connection.py  dispatcher.py  engine.py  frames.py  healthcheck.py  logging_setup.py  main.py  ollama.py  vllm.py  vllm_models_config.py
backend/tests/: conftest.py  test_config.py  test_connection.py  test_dispatcher.py  test_frames.py  test_healthcheck.py  test_integration.py  test_logging.py  test_main_payload.py  test_ollama_generate_chat.py  test_ollama_list_models.py  test_vllm_generate_chat.py  test_vllm_list_models.py  test_vllm_models_config.py
backend/tests/fixtures/: ollama_tags.json  vllm_models.json
docs/superpowers/plans/: 2026-04-16-ollama-sidecar-csp1.md  2026-04-16-vllm-support.md
docs/superpowers/specs/: 2026-04-16-vllm-support-design.md
