[project]
name = "chatsune-ollama-sidecar"
version = "1.0.0"
description = "CSP/1 sidecar bridging a local Ollama engine to a remote Chatsune backend."
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "websockets>=14.0",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "aiohttp>=3.11",
    "structlog>=24.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["sidecar*"]
